cabal-version: 2.0
name:          char-boxdrawing
version:       1
synopsis:      Combinators for unicode or ASCII box drawing characters
description:
  Draw and intersect border characters for text-based drawings

license:       BSD3
license-file:  LICENSE
author:        Mike Ledger
maintainer:    mike@quasimal.com
copyright:     2024
category:      Text
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/mikeplus64/nice-terminal-table
  subdir:   char-boxdrawing

library
  exposed-modules:  Data.Char.BoxDrawing
  build-depends:    base >=4.17 && <5
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite char-boxdrawing-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
      base             >=4.17 && <5
    , char-boxdrawing
    , falsify
    , tasty
