cabal-version: 2.0
name:          kittyprint
version:       1
synopsis:      Combinators for unicode or ASCII box drawing characters
description:
  Draw and intersect border characters for text-based drawings

license:       BSD3
license-file:  LICENSE
author:        Mike Ledger
maintainer:    mike@quasimal.com
copyright:     2024
category:      Text
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/mikeplus64/nice-terminal-table
  subdir:   kittyprint

library
  exposed-modules:    KittyPrint
  build-depends:
      base                 >=4.17 && <5
    , bytestring
    , Chart
    , Chart-diagrams
    , containers
    , diagrams
    , diagrams-rasterific
    , juicypixels
    , lens
    , pretty-simple
    , table-layout
    , text

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoStarIsType
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    PostfixOperators
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns
